P01/Tests/SyntaxErrors/badalphasize3.tm
states 3
I
A -
B +
alphabet foo

